--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-URI=mongodb://127.0.0.1:27017/UAS
+URI=mongodb+srv://habibie:Mr.Hellfire3000@cluster0.z2idfrc.mongodb.net/?retryWrites=true&w=majority
 PORT=8080
